# CMakeBoilerplate

./: CMakeLists.txt  README.md  watchBuild.sh
test/: CMakeLists.txt  ExampleTest.h  TestMain.cpp
